[package]
name = "macmap"
version = "0.2.0"
edition = "2021"
description = "A command-line tool to scan local networks and map IP addresses to MAC addresses." # パッケージの説明
license = "MIT" # READMEに記載されているライセンス
repository = "https://github.com/JarodBruce/macmap" # リポジトリのURL
readme = "README.md"

[dependencies]
local-ip-address = "0.6.5"
get_if_addrs = "0.5.3"
pnet = "0.35.0"
rayon = "1.10.0"
users = "0.11.0"
